[gd_scene load_steps=4 format=3 uid="uid://dpvx1h0bummai"]

[ext_resource type="Script" uid="uid://cdq0fmp05h6gx" path="res://scenes/ground/ground.gd" id="1_rrkwn"]
[ext_resource type="Texture2D" uid="uid://dhanyld3xdw28" path="res://sprites/ground/ground.png" id="1_yh8r4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7tip"]
size = Vector2(512, 30)

[node name="Ground" type="Node2D"]
script = ExtResource("1_rrkwn")

[node name="Ground1" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ground1"]
scale = Vector2(2, 2)
texture = ExtResource("1_yh8r4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_t7tip")

[node name="Ground2" type="Area2D" parent="."]
position = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="Ground2"]
scale = Vector2(2, 2)
texture = ExtResource("1_yh8r4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_t7tip")

[connection signal="body_entered" from="Ground1" to="." method="_body_entered"]
[connection signal="body_entered" from="Ground2" to="." method="_body_entered"]
